--- a/SimpleXamarinApp/MainPage.xaml
+++ b/SimpleXamarinApp/MainPage.xaml
@@ -1,5 +1,15 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="SimpleXamarinApp.MainPage">
+<?xml version="1.0" encoding="UTF-8"?>
+<ContentPage
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class="SimpleXamarinApp.MainPage">
 	<ContentPage.Content>
+        <StackLayout Padding="30">
+            <Label Text="Order form" Font="20" />
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Customer" />
+                <Entry Placeholder="Enter full name" />
+            </StackLayout>
+        </StackLayout>
 	</ContentPage.Content>
 </ContentPage>
